--- a/figma-textlint/ui.html
+++ b/figma-textlint/ui.html
@@ -1,8 +1,21 @@
 <h2>Figma TextLint</h2>
-<p>Token: <input id="token" value=""></p>
+<p>
+    <label for="file">Token file:</label>
+    <input type="file" id="file" name="file">
+</p>
 <button id="execute">Execute</button>
 <button id="cancel">Cancel</button>
 <script>
+  const reader = new FileReader();
+  const input = document.getElementById('file');
+  let token = '';
+
+  input.addEventListener('change', () => {
+    reader.readAsText(input.files[0], 'UTF-8');
+    reader.onload = () => {
+      token = reader.result;
+    };
+  });
 
   document.getElementById('execute').onclick = () => {
     const request = new XMLHttpRequest();
@@ -16,7 +29,7 @@
   }
 
   document.getElementById('cancel').onclick = () => {
-    parent.postMessage({pluginMessage: { type: 'cancel' }}, '*');
+    parent.postMessage({pluginMessage: {type: 'cancel'}}, '*');
   }
 
 </script>
