--- a/figma-textlint/ui.html
+++ b/figma-textlint/ui.html
@@ -28,15 +28,46 @@
   onmessage = (event) => {
     if (event.data.pluginMessage.type !== 'send-text') return;
 
-    const text = event.data.pluginMessage.data;
+    const fileKey = event.data.pluginMessage.fileKey;
+    const nodeId = event.data.pluginMessage.nodeId;
+    const characters = event.data.pluginMessage.characters;
 
     const request = new XMLHttpRequest();
     request.open('POST', 'http://localhost:3000/v1/textlint');
     request.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
     request.responseType = 'json';
     request.onload = () => {
-      console.log(request.response);
+      const messages = request.response.messages;
+      messages.forEach(result => {
+        postComment(fileKey, nodeId, result);
+      });
     };
-    request.send(`text=${text}`);
+    request.send(`text=${characters}`);
+  }
+
+  function postComment(fileKey, nodeId, comment) {
+    const data = {
+      "message": comment,
+      "client_meta": {
+        "node_id": nodeId,
+        "node_offset": {
+          "x": 10,
+          "y": 10
+        }
+      }
+    }
+
+    const request = new XMLHttpRequest();
+    request.open('POST', `https://api.figma.com/v1/files/${fileKey}/comments`);
+    request.setRequestHeader('X-FIGMA-TOKEN', token);
+    request.setRequestHeader('Content-Type', 'application/json');
+    request.onload = () => {
+      if (request.status !== 200) {
+        console.log(`Error ${request.status}: ${request.statusText}`);
+      } else {
+        console.log('Complete!');
+      }
+    }
+    request.send(JSON.stringify(data));
   }
 </script>
