--- a/figma-textlint/ui.html
+++ b/figma-textlint/ui.html
@@ -6,10 +6,10 @@
 <button id="execute">Execute</button>
 <button id="cancel">Cancel</button>
 <script>
-  const reader = new FileReader();
-  const input = document.getElementById('file');
   let token = '';
 
+  const reader = new FileReader();
+  const input = document.getElementById('file');
   input.addEventListener('change', () => {
     reader.readAsText(input.files[0], 'UTF-8');
     reader.onload = () => {
@@ -37,10 +37,17 @@
     request.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
     request.responseType = 'json';
     request.onload = () => {
-      const messages = request.response.messages;
-      messages.forEach(result => {
-        postComment(fileKey, nodeId, result);
-      });
+      if (request.status !== 200) {
+        alert(`Error ${request.status}: ${request.statusText}`);
+      } else {
+        const messages = request.response.messages;
+        messages.forEach(message => {
+          postComment(fileKey, nodeId, message);
+        });
+      }
+    };
+    request.onerror = () => {
+      alert("Network error")
     };
     request.send(`text=${characters}`);
   }
@@ -63,11 +70,12 @@
     request.setRequestHeader('Content-Type', 'application/json');
     request.onload = () => {
       if (request.status !== 200) {
-        console.log(`Error ${request.status}: ${request.statusText}`);
-      } else {
-        console.log('Complete!');
+        alert(`Error ${request.status}: ${request.statusText}`);
       }
     }
+    request.onerror = () => {
+      alert("Network error")
+    };
     request.send(JSON.stringify(data));
   }
 </script>
