Extract to method

--- a/figma-textlint/ui.html
+++ b/figma-textlint/ui.html
@@ -22,6 +22,10 @@
   }
 
   document.getElementById('cancel').onclick = () => {
+    sendCloseMessage();
+  }
+
+  function sendCloseMessage() {
     parent.postMessage({pluginMessage: {type: 'close'}}, '*');
   }
 
