--- a/figma-textlint/ui.html
+++ b/figma-textlint/ui.html
@@ -43,9 +43,12 @@
           alert(e);
         });
       if (messages !== undefined) {
-        messages.forEach(message => {
-          postComment(fileKey, nodeId, message);
-        });
+        await Promise.all(messages.map(async message => {
+          await postComment(fileKey, nodeId, message)
+            .catch((e) => {
+              alert(e);
+            });
+        }));
       }
     }));
     alert('Done.');
@@ -72,30 +75,33 @@
     });
   }
 
-  function postComment(fileKey, nodeId, comment) {
-    const data = {
-      "message": comment,
-      "client_meta": {
-        "node_id": nodeId,
-        "node_offset": {
-          "x": 10,
-          "y": 10
+  async function postComment(fileKey, nodeId, comment) {
+    return new Promise((resolve, reject) => {
+      const data = {
+        "message": comment,
+        "client_meta": {
+          "node_id": nodeId,
+          "node_offset": {
+            "x": 10,
+            "y": 10
+          }
         }
       }
-    }
 
-    const request = new XMLHttpRequest();
-    request.open('POST', `https://api.figma.com/v1/files/${fileKey}/comments`);
-    request.setRequestHeader('X-FIGMA-TOKEN', token);
-    request.setRequestHeader('Content-Type', 'application/json');
-    request.onload = () => {
-      if (request.status !== 200) {
-        alert(`Error ${request.status}: ${request.statusText}`);
+      const request = new XMLHttpRequest();
+      request.open('POST', `https://api.figma.com/v1/files/${fileKey}/comments`);
+      request.setRequestHeader('X-FIGMA-TOKEN', token);
+      request.setRequestHeader('Content-Type', 'application/json');
+      request.onload = () => {
+        if (request.status !== 200) {
+          reject(`Error ${request.status}: ${request.statusText}`);
+        }
+        resolve();
       }
-    }
-    request.onerror = () => {
-      alert("Network error")
-    };
-    request.send(JSON.stringify(data));
+      request.onerror = () => {
+        reject("Network error")
+      };
+      request.send(JSON.stringify(data));
+    });
   }
 </script>
