Fix button title

--- a/figma-textlint/ui.html
+++ b/figma-textlint/ui.html
@@ -3,7 +3,7 @@
     <label for="file">Token file:</label>
     <input type="file" id="file" name="file">
 </p>
-<button id="execute">Execute</button>
+<button id="execute">Run</button>
 <button id="cancel">Cancel</button>
 <script>
   let token = '';
